data/all_generated_tests/raw_wast_tests/loop_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1248.wast
;; 9. **Test: Loop with Recursive Call to Exported Function**    Description: Develop a loop that calls an exported function which recursively calls another function within the same module boundary. Verify that control flow and stack unwinding/rewinding are handled correctly.    Constraints:    - Ensure proper handling of recursive calls across module boundaries.    - Validate stack consistency throughout recursion and loop transitions.    - Confirm correct operand and result types after function returns.

(assert_invalid
  (module
    (func $recursive_call (result i32)
      (i32.const 0)
      (call $loop_function)
      (i32.add)
    )
    (func $loop_function (result i32)
      (loop (result i32)
        (call $recursive_call)
        (br 0)
      )
    )
    (export "main" (func $loop_function))
  )
  "stack overflow or incorrect stack management"
)